Fix aside overlapping
Fixed <aside> elements on the left from overlapping the main content text.

--- a/fantasycourt.nl/themes/fantasy-court/assets/css/_aside.scss
+++ b/fantasycourt.nl/themes/fantasy-court/assets/css/_aside.scss
@@ -4,7 +4,10 @@ aside {
   }
 
   position: absolute;
-  right: -20vw;
+
+  &.right {
+    right: -20vw;
+  }
 
   &.left {
     left: -25vw;
